--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,39 +13,49 @@
  *= require_tree .
  *= require_self
  */
- .bg_primary-color {
-    background-color: #FFFFFF;
-  }
-  .primary-color {
-    background-color: #FFFFFF;
-  }
-  .bg_secondary-color {
-    background-color: #293241;
-  }
-  .secondary-color {
-    color: #293241;
-  }
-  .custom-button.btn {
-    background-color: #293241;
-    color: #FFF;
+$reindeer-red: red;
+$text-forefront: white;
+
+.my-4 {
+  background-color: $text-forefront;
+}
+
+.bg_primary-color {
+  background-color: $text-forefront;
+}
+.primary-color {
+  background-color: black;
+}
+.bg_secondary-color {
+  background-color: $text-forefront;
+}
+.secondary-color {
+  color:$text-forefront;
+}
+.custom-button {
+  &.btn {
+    background-color: $reindeer-red;
+    color: #fff;
     border: none;
+
+    &:hover {
+      color: black;
+      border: none;
+    }
   }
-  .custom-button.btn:hover {
-    color: #FFF !important;
-    border: none;
-  }
-  .hero {
-    width: 100vw;
-    height: 50vh;
-  }
-  .hero img {
-    object-fit: cover;
-    object-position: top;
-    height: 100%;
-    width: 100%;
-  }
-  .overlay {
-    height: 100%;
-    width: 100%;
-    opacity: 0.4;
-  }
+}
+.hero {
+  width: 100vw;
+  height: 50vh;
+}
+.hero img {
+  object-fit: cover;
+  object-position: top;
+  height: 100%;
+  width: 100%;
+}
+.overlay {
+  height: 100%;
+  width: 100%;
+  opacity: 0.4;
+}
