--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>RailsReactTs</title>
+    <title>Hunt Console</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
